Update Projects “projects”

--- a/content/projects.json
+++ b/content/projects.json
@@ -20,6 +20,11 @@
         "Tuning flight mode dan failsafe",
         "Integrasi dengan ground control station"
       ]
+    },
+    {
+      "title": "Test 123",
+      "kicker": "123",
+      "summary": "123"
     }
   ]
 }
