Update Projects “projects”

--- a/content/projects.json
+++ b/content/projects.json
@@ -11,7 +11,7 @@
         "Buffer lokal saat koneksi terputus",
         "Grafana dashboard untuk visualisasi"
       ],
-      "image": "/assets/uploads/edge-agri.jpg"
+      "image": "/assets/uploads/diagram-blok-tugas-akhir-1-tugas-akhir.drawio.png"
     },
     {
       "title": "Drone VTOL Platform",
