--- a/admin/config.yml
+++ b/admin/config.yml
@@ -33,6 +33,7 @@ collections:
               - { label: "Kicker", name: "kicker", widget: "string", required: false }
               - { label: "Short Summary", name: "summary", widget: "text", required: false }
               - { label: "Details (Modal)", name: "details", widget: "text", required: false }
+              - { label: "Figma Link", name: "figmaLink", widget: "string", required: false, hint: "URL to Figma case study or prototype" }
 
               # MULTI IMAGE (carousel modal)
               - label: "Images"
