update figma link2

--- a/content/projects.json
+++ b/content/projects.json
@@ -11,7 +11,7 @@
         "Local buffer when disconnected (MySQL)",
         "Grafana dashboard for visualization"
       ],
-      "figmaLink": "https://www.figma.com/design/WGnp1OUtpweZFepLHE9fKQ/Portfolio?node-id=0-1&t=LgYcKwePUCwhgFHz-1",
+      "figmaLink": "",
       "image": "/assets/uploads/20250116_92749ambygpsmapcamera.jpg",
       "images": [
         "/assets/uploads/20250116_92749ambygpsmapcamera.jpg",
@@ -44,7 +44,7 @@
         "Mobile & web UI design systems",
         "Interactive prototype walk-throughs"
       ],
-      "figmaLink": "https://www.figma.com/file/your-figma-link",
+      "figmaLink": "https://www.figma.com/design/WGnp1OUtpweZFepLHE9fKQ/Portfolio?node-id=0-1&p=f",
       "images": []
     }
   ]
