--- a/content/projects.json
+++ b/content/projects.json
@@ -36,6 +36,8 @@
       ],
       "figmaLink": "",
       "image": "/assets/uploads/img_4692.jpg",
+      "link": "https://photos.app.goo.gl/TzFwqhgca4BGcJ6E8",
+      "linkLabel": "Documentation",
       "images": [
         "/assets/uploads/img_4692.jpg"
       ]
